--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ navbar-links:
     #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     #- Learn markdown: "http://www.markdowntutorial.com/"
   About:
-  Resume: 
+  Resume: "/img/Parinita_Edke.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/img/avatar-icon.png"
+ avatar: "/img/profile_picture.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
