--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,9 @@ navbar-links:
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+navbar-col: "#5680E9"
+navbar-text-col: "#84CEEB"
+navbar-children-col: "#5AB9EA"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
