--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Projects:
     #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     #- Learn markdown: "http://www.markdowntutorial.com/"
-  About:
+  About: "aboutme.md"
   Resume: "/img/Parinita_Edke.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
