--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ navbar-links:
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
- title-img: "/img/parinita_pic.png"
+# title-img: "/img/parinita_pic.png"
 
 # --- Background colour/image options --- #
 
