--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: A virtual proof that I'm awesome
 # List of links in the navigation bar
 navbar-links:
   Home: "https://parinitaedke.me"
-  Projects: "projects"
+  Projects: "projects.html"
     #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     #- Learn markdown: "http://www.markdowntutorial.com/"
   About: "aboutme"
