--- a/_config.yml
+++ b/_config.yml
@@ -29,11 +29,11 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/img/parinita_pic.png"
+ avatar: "/img/avatar-icon.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-# title-img: "/img/parinita_pic.png"
+ title-img: "/img/avatar-icon.png"
 
 # --- Background colour/image options --- #
 
