--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ avatar: "/img/parinita_pic.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/img/parinita_pic.png"
+# title-img: "/img/parinita_pic.png"
 
 # --- Background colour/image options --- #
 
@@ -129,7 +129,7 @@ share-links-active:
 
 # To use Staticman comments, fill in repository, branch, and endpoint
 staticman:
-  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
+  repository : parinitaedke/parinitaedke.github.io # GitHub username/repository eg. "daattali/beautiful-jekyll"
   branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
   endpoint   : # URL of your own deployment, with a trailing slash (will fallback to a public GitLab instance) eg. https://<your-api>/v3/entry/github/
   reCaptcha:
