--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ description: A virtual proof that I'm awesome
 navbar-links:
   Home: "https://parinitaedke.me"
   Projects: "projects"
+  Courses: 
     #- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     #- Learn markdown: "http://www.markdowntutorial.com/"
   About: "aboutme"
