--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,8 @@ navbar-children-col: "#D8C3A5"
 page-col: "EAE7DC"
 link-col: "#008AFF"
 hover-col: "#D8C3A5"
-footer-col: "E85A4F"
-footer-text-col: "#E85A4F"
+footer-col: "#E85A4F"
+footer-text-col: "#000000"
 footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
