--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ share-links-active:
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
+#gtag: "UA-157535528-1"
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
